# Neon

./: .gitignore  CMakeLists.txt  README.md  TODO.md
images/: cornell-box-diffuse.toml  cornell-box.toml  test.toml
include/math/: boundingBox.h  interval.h  matrix.h  point.h  ray.h  transform.h  vector.h
include/reflection/: bsdf.h  dielectric.h  lambertian.h  metallic.h
include/scene/: camera.h  scene.h  sceneParser.h  shape.h  sphere.h  triangle.h
include/scene/accelerators/: accelerator.h  octree.h
include/scene/integrators/: integrator.h  normalIntegrator.h  whiteBoxIntegrator.h  whittedIntegrator.h
include/scene/lights/: areaLight.h  light.h
include/utils/: color.h  consts.h  image.h  objectFactory.h  threadPool.h  utils.h  visualizer.h
include/utils/sampling/: discretePDF.h  independentSampler.h  sampler.h  warp.h
src/: main.cpp
src/math/: boundingBox.cpp  matrix.cpp  transform.cpp
src/reflection/: dielectric.cpp  lambertian.cpp  metallic.cpp
src/scene/: camera.cpp  scene.cpp  sceneParser.cpp  sphere.cpp  triangle.cpp
src/scene/accelerators/: octree.cpp
src/scene/integrators/: normalIntegrator.cpp  whiteBoxIntegrator.cpp  whittedIntegrator.cpp
src/scene/lights/: areaLight.cpp
src/shaders/: shader.frag  shader.vert
src/utils/: image.cpp  objectFactory.cpp  threadPool.cpp  visualizer.cpp
src/utils/sampling/: discretePDF.cpp  independentSampler.cpp  warp.cpp
